--- a/README
+++ b/README
@@ -13,8 +13,8 @@ To view the options to be passed to SimBac, run without any arguments or with th
     -R NUM Sets the value of θ, the site-specific mutation rate, between 0 and 1 (default is 0.01)
     -m NUM Sets the lower bound of site-mutation (divergence) in a region of external recombination, between 0 and 1 (default is 0)
     -M NUM Sets the upper bound of site-mutation (divergence) in a region of external recombination, between 0 and 1 (default is 0)
-    -R NUM Sets the rate of internal (within species) recombination, ρ_i , between 0 and 1 (default is 0.01)
-    -r NUM Sets the rate of external (between species) recombination, ρ_e , between 0 and 1 (default is 0)
+    -R NUM Sets the site-specific rate of internal (within species) recombination, R_i (default is 0.01)
+    -r NUM Sets the site-specific rate of external (between species) recombination, R_e (default is 0)
     -D NUM Sets the average length of an internal recombinant interval, δ_i (default is 500)
     -e NUM Sets the average length of an external recombinant interval, δ_e (default is 500)
     -B NUM,. . .,NUM Sets the number and lengths of fragments of genetic material (default is 10000)
@@ -38,3 +38,7 @@ Linear genomes can be approximated by placing a large gap at the end of the ance
 ./SimBac -N 100 -B 100000 -G 1000000 -o genomes.fasta -c clonal_frame.nwk
 
 This places a gap of length 1Mb after the genome, meaning recombinant intervals cannot include both the first and last element of the genome.
+
+
+Supplemantary information with a manual and technical description can be found here:
+https://github.com/tbrown91/SimBac/SimBac_supp.pdf
