--- a/README
+++ b/README
@@ -31,8 +31,7 @@ To view the options to be passed to SimBac, run without any arguments or with th
     -o FILE Name of file to write generated sequences (FASTA format)
     -c FILE Name of file to write clonal genealogy (Newick format)
     -l FILE Name of file to write local trees (Newick format)
-    -b FILE Name of file to write log of internal recombination breaks
-    -f FILE Name of file to write log of external recombination breaks
+    -b FILE Name of file to write log of recombination break points and origins and recipient lineages of the recombinant material
     -d FILE Name of file to export ancestral recombination graph (DOT file)
     -a Include ancestral material in the DOT graph
 
